examples/istio/gateway.yaml
# Istio API is not yet fully compatible with K8s Gateway API
# Use Istio Ingress Gateway instead. See: https://istio.io/latest/docs/setup/additional-setup/gateway/#deploying-a-gateway
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello
spec:
  parentRefs:
  - name: hello-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: hello-svc-v1
      port: 80
      weight: 75
    - name: hello-svc-v2
      port: 80
      weight: 25
