examples/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: hello-svc-v1
        port:
          number: 80
      weight: 50
    - destination:
        host: hello-svc-v2
        port:
          number: 80
      weight: 50
    # Fault Injection - Used to simulate error conditions
    fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 3s
      abort:
        httpStatus: 500
        percentage:
          value: 25
